Produzione/force-app/main/default/objects/BRiT_KPI__c/fields/CondizioneMaggioreDi__c.field-meta.xml
<CustomField>
    <fullName>CondizioneMaggioreDi__c</fullName>
    <description>Se impostato un valore la colorazione del numero visualizzato in app diventerà rossa se prima e verde se dopo, nero se non presente.</description>
    <inlineHelpText>Se impostato un valore la colorazione del numero visualizzato in app diventerà rossa se prima e verde se dopo, nero se non presente.</inlineHelpText>
    <label>CondizioneMaggioreDi</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>