Produzione/force-app/main/default/objects/BRiT_KPI__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <label>KPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>