Produzione/force-app/main/default/objects/BRiT_KPI__c/fields/Ordine_KPI__c.field-meta.xml
<CustomField>
    <fullName>Ordine_KPI__c</fullName>
    <description>Concatenazione dell&apos;ordine con il KPI</description>
    <formula>TEXT(Ordine__c) + &quot;. &quot; +  KPI__c</formula>
    <inlineHelpText>Concatenazione dell&apos;ordine con il KPI</inlineHelpText>
    <label>Ordine KPI</label>
    <type>Text</type>
</CustomField>