Produzione/force-app/main/default/objects/BRiT_KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Cod_Area_KPI__c</columns>
    <columns>NAME</columns>
    <columns>KPI__c</columns>
    <columns>Ordine__c</columns>
    <columns>CondizioneMaggioreDi__c</columns>
    <columns>Ordine_KPI__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutti i record</label>
</ListView>